--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,9 +15,8 @@ grandes telas: acima de 1200px
     padding: 0;
 }
 
-body{
-    min-width: 600px;
-    max-width:768px;
+body, html{
+    width: 100vw;
 }
 
 #nome{
@@ -40,7 +39,15 @@ nav{
 }
 
 .video{
-    display: flex;
-    justify-content: center;
+    width: 100vw;
+    height: 50vh;
+    position: relative;
+}
 
+iframe{
+    position: absolute;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
