--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,10 +13,11 @@ grandes telas: acima de 1200px
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body, html{
-    width: 100vw;
+
 }
 
 #nome{
@@ -24,12 +25,28 @@ body, html{
 }
 
 header{
-    width: 100vw;
+    width: 100%;
+    padding: 10px 0px;
 }
+
 nav{
     width: 100vw;
     display: flex;
     justify-content: space-between;
+    margin: auto;
+}
+.container_foto{
+    width: 100vw;
+    height: 100vh;
+
+}
+.foto{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 40vh;
+    background-image: url(../imagens/Nakao-97\ 2.JPEG);
+    background-color: black;
 }
 
 .direita{
@@ -47,7 +64,6 @@ nav{
 iframe{
     position: absolute;
     width: 90%;
-    height: 90%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
