--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,12 +33,13 @@ body, html{
     height: 500vh;
     max-width: 768px;
     font-family: "Fraunces", serif;
-    color: #1e0d0e;
+    color: #d85059;
+
 }
 
 #nome{
     font-weight: 600;
-
+    color: rgb(251, 214, 138);
 }
 
 header{
@@ -47,9 +48,24 @@ header{
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
+}
+
+header.rolagem #nome{
+    color: #d85059;
+}
+
+header.rolagem a{
+    color: #d85059;
+}
+
+header.rolagem{
+    background-color: rgb(251, 214, 138);
+    transition: 1s;
 }
 
 nav{
+    font-size: 1.1em;
     width: 100vw;
     display: flex;
     justify-content: space-between;
@@ -59,14 +75,21 @@ nav{
 a{
     text-decoration: none;
     color: #1e0d0e;
+    color: rgb(251, 214, 138);
 }
 
-.foto{
+.foto1{
     background-image: url(../imagens/Nakao-97\ 2.JPEG);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: 100vh;
+}
+
+.foto2{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .esquerda{
@@ -79,10 +102,15 @@ a{
     justify-content: space-around;
 }
 
+.pag2{
+    background-color: #fbd68a;
+}
+
 .video{
     width: 100vw;
     height: 50vh;
     position: relative;
+    overflow: hidden;
 }
 
 iframe{
@@ -93,3 +121,124 @@ iframe{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+h1{
+    text-align: center;
+    padding-top: 7vh;
+    padding-bottom: 4vh;
+}
+
+.oucaem{
+    text-align: center;
+}
+
+i{
+    margin-right: 1rem;
+}
+
+.foto2{
+    background-image: url(../imagens/Nakao-251\ 2.jpg);
+    height: 100vh;
+}
+
+blockquote{
+    font-size: 2em;
+    line-height: 4rem;
+    padding: 5vh;
+    color:#f94854;
+    display: inline-block;
+}
+
+.sol{
+    color: #fbd68a;
+}
+
+.spotify {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    color: #d85059;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M17.9 10.9C14.7 9 9.35 8.8 6.3 9.75c-.5.15-1-.15-1.15-.6c-.15-.5.15-1 .6-1.15c3.55-1.05 9.4-.85 13.1 1.35c.45.25.6.85.35 1.3c-.25.35-.85.5-1.3.25m-.1 2.8c-.25.35-.7.5-1.05.25c-2.7-1.65-6.8-2.15-9.95-1.15c-.4.1-.85-.1-.95-.5s.1-.85.5-.95c3.65-1.1 8.15-.55 11.25 1.35c.3.15.45.65.2 1m-1.2 2.75c-.2.3-.55.4-.85.2c-2.35-1.45-5.3-1.75-8.8-.95c-.35.1-.65-.15-.75-.45c-.1-.35.15-.65.45-.75c3.8-.85 7.1-.5 9.7 1.1c.35.15.4.55.25.85M12 2A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+
+  .deezer {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    color:#d85059;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpath fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' d='M37.21 11.45c.36-2.091.89-3.406 1.476-3.409h.001c1.094.004 1.98 4.565 1.98 10.196s-.887 10.195-1.982 10.195c-.449 0-.863-.775-1.196-2.074c-.527 4.755-1.621 8.023-2.887 8.023c-.98 0-1.859-1.963-2.449-5.06c-.403 5.889-1.417 10.067-2.602 10.067c-.744 0-1.423-1.656-1.925-4.351c-.604 5.564-1.999 9.463-3.625 9.463s-3.025-3.898-3.626-9.463c-.499 2.695-1.177 4.35-1.924 4.35c-1.186 0-2.198-4.177-2.603-10.065c-.59 3.096-1.467 5.06-2.449 5.06c-1.265 0-2.36-3.268-2.887-8.024c-.33 1.303-.747 2.074-1.196 2.074c-1.095 0-1.983-4.564-1.983-10.195S8.221 8.04 9.316 8.04c.588 0 1.113 1.319 1.478 3.41c.584-3.607 1.533-5.951 2.605-5.951c1.273 0 2.377 3.315 2.899 8.128c.51-3.503 1.286-5.736 2.154-5.736c1.216 0 2.25 4.392 2.633 10.52c.72-3.142 1.764-5.113 2.918-5.113s2.197 1.972 2.916 5.112c.385-6.127 1.418-10.52 2.634-10.52c.867 0 1.64 2.234 2.154 5.737c.52-4.813 1.624-8.128 2.898-8.128c1.068 0 2.02 2.345 2.605 5.95ZM4.5 17.234c0-2.517.636-4.558 1.421-4.558s1.422 2.04 1.422 4.558s-.636 4.558-1.422 4.558s-1.42-2.04-1.42-4.558m36.168 0c0-2.517.634-4.558 1.416-4.558s1.416 2.04 1.416 4.558s-.634 4.558-1.416 4.558s-1.416-2.04-1.416-4.558'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+
+  .youtube {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    color: #d85059;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='m10 15l5.19-3L10 9zm11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+
+  .applemusic {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    color: #d85059;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M23.994 6.124a9.2 9.2 0 0 0-.24-2.19c-.317-1.31-1.062-2.31-2.18-3.043a5 5 0 0 0-1.877-.726a10.5 10.5 0 0 0-1.564-.15c-.04-.003-.083-.01-.124-.013H5.986q-.227.014-.455.026c-.747.043-1.49.123-2.193.4c-1.336.53-2.3 1.452-2.865 2.78c-.192.448-.292.925-.363 1.408a11 11 0 0 0-.1 1.18c0 .032-.007.062-.01.093v12.223l.027.424c.05.815.154 1.624.497 2.373c.65 1.42 1.738 2.353 3.234 2.801c.42.127.856.187 1.293.228c.555.053 1.11.06 1.667.06h11.03a13 13 0 0 0 1.57-.1c.822-.106 1.596-.35 2.295-.81a5.05 5.05 0 0 0 1.88-2.207c.186-.42.293-.87.37-1.324c.113-.675.138-1.358.137-2.04c-.002-3.8 0-7.595-.003-11.393zm-6.423 3.99v5.712c0 .417-.058.827-.244 1.206c-.29.59-.76.962-1.388 1.14q-.524.15-1.07.173c-.95.045-1.773-.6-1.943-1.536a1.88 1.88 0 0 1 1.038-2.022c.323-.16.67-.25 1.018-.324c.378-.082.758-.153 1.134-.24c.274-.063.457-.23.51-.516a1 1 0 0 0 .02-.193q0-2.723-.002-5.443a.7.7 0 0 0-.026-.185c-.04-.15-.15-.243-.304-.234c-.16.01-.318.035-.475.066q-1.14.226-2.28.456l-2.325.47l-1.374.278l-.048.013c-.277.077-.377.203-.39.49q-.002.063 0 .13c-.002 2.602 0 5.204-.003 7.805c0 .42-.047.836-.215 1.227c-.278.64-.77 1.04-1.434 1.233q-.526.152-1.075.172c-.96.036-1.755-.6-1.92-1.544c-.14-.812.23-1.685 1.154-2.075c.357-.15.73-.232 1.108-.31c.287-.06.575-.116.86-.177q.574-.126.6-.714v-.15l.002-8.882c0-.123.013-.25.042-.37c.07-.285.273-.448.546-.518c.255-.066.515-.112.774-.165q1.1-.224 2.2-.444l2.27-.46l2.01-.403c.22-.043.442-.088.663-.106c.31-.025.523.17.554.482q.012.11.012.223q.003 2.866 0 5.732z'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+
+  .amazonmusic {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    color: #d85059;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M14.845 9.408c-1.39 1.02-3.405 1.563-5.142 1.563a9.33 9.33 0 0 1-6.277-2.383c-.131-.117-.014-.277.142-.185a12.7 12.7 0 0 0 6.285 1.658a12.5 12.5 0 0 0 4.791-.977c.236-.098.433.154.203.324zm.579-.656c-.179-.226-1.175-.109-1.623-.055c-.137.016-.158-.103-.035-.187c.796-.556 2.099-.396 2.25-.21c.155.187-.04 1.488-.785 2.11c-.115.096-.224.044-.172-.083c.168-.416.543-1.35.365-1.575m-1.592-4.17v-.54c0-.082.062-.137.137-.137h2.435c.078 0 .14.055.14.135v.464c0 .078-.066.18-.185.34L15.1 6.635c.468-.01.965.06 1.39.297a.24.24 0 0 1 .129.212v.574c0 .082-.089.172-.179.123a2.82 2.82 0 0 0-2.572.006c-.086.045-.174-.045-.174-.125v-.548c0-.088.002-.238.09-.37l1.462-2.089h-1.271c-.078 0-.142-.053-.144-.135zm4.808-.747c1.1 0 1.694.94 1.694 2.133c0 1.153-.656 2.068-1.694 2.068c-1.079 0-1.665-.94-1.665-2.109c0-1.177.594-2.092 1.665-2.092m.006.771c-.545 0-.58.739-.58 1.202s-.006 1.449.574 1.449c.574 0 .601-.796.601-1.282c0-.318-.014-.7-.11-1.001c-.083-.263-.249-.368-.485-.368m-6.008 3.342c-.049.04-.14.045-.174.016a1.9 1.9 0 0 1-.425-.492c-.406.412-.695.537-1.222.537c-.622 0-1.108-.383-1.108-1.148a1.25 1.25 0 0 1 .79-1.204c.402-.177.964-.208 1.393-.257c0 0 .035-.461-.09-.63a.52.52 0 0 0-.417-.19c-.273 0-.54.147-.593.433c-.014.082-.074.151-.14.143l-.707-.076a.13.13 0 0 1-.11-.154c.163-.865.949-1.128 1.655-1.128c.36 0 .83.097 1.115.367c.36.335.327.78.327 1.268v1.149c0 .344.143.496.279.68c.047.068.057.148-.002.198c-.152.125-.57.488-.57.488zm-.746-1.797v-.16c-.536 0-1.102.115-1.102.743c0 .318.166.533.451.533c.206 0 .394-.127.513-.335c.144-.256.138-.494.138-.781M2.928 7.948c-.047.041-.138.045-.173.016c-.254-.195-.424-.492-.424-.492c-.408.412-.696.537-1.223.537c-.623 0-1.107-.383-1.107-1.148a1.25 1.25 0 0 1 .79-1.204c.401-.177.963-.207 1.392-.257c0 0 .035-.461-.09-.63a.52.52 0 0 0-.417-.19c-.274 0-.539.148-.592.433c-.015.082-.076.151-.14.143l-.71-.076a.13.13 0 0 1-.108-.154c.162-.865.95-1.128 1.655-1.128c.361 0 .83.097 1.116.367c.359.335.324.78.324 1.268v1.149c0 .344.144.496.279.68c.047.068.057.148-.002.198c-.152.125-.57.488-.57.488m-.745-1.797v-.16c-.535 0-1.101.115-1.101.743c0 .318.164.533.45.533c.206 0 .395-.127.514-.334c.143-.257.137-.495.137-.782m2.913-.334v2.002a.14.14 0 0 1-.14.137h-.738a.137.137 0 0 1-.14-.137V4.053a.14.14 0 0 1 .14-.138h.691a.137.137 0 0 1 .138.138v.482h.014c.18-.476.519-.7.974-.7c.464 0 .753.224.962.7a1.05 1.05 0 0 1 1.022-.7c.312 0 .65.127.857.415c.236.318.187.779.187 1.185v2.386c0 .076-.064.135-.144.135h-.738a.137.137 0 0 1-.133-.135V5.817c0-.16.014-.558-.02-.708c-.056-.256-.222-.328-.438-.328a.49.49 0 0 0-.44.312c-.077.19-.07.508-.07.724V7.82c0 .076-.064.135-.144.135h-.739a.137.137 0 0 1-.133-.135V5.817c0-.423.068-1.042-.457-1.042c-.534 0-.513.603-.513 1.042zm16.808 2.002a.137.137 0 0 1-.138.137h-.74a.137.137 0 0 1-.138-.137V4.053a.137.137 0 0 1 .138-.138h.683c.082 0 .14.064.14.107v.576h.014c.205-.517.496-.763 1.009-.763c.332 0 .656.12.863.445c.193.304.193.813.193 1.178v2.379a.14.14 0 0 1-.141.119h-.743a.14.14 0 0 1-.131-.119V5.552c0-.763-.293-.786-.464-.786c-.197 0-.357.154-.424.296a1.7 1.7 0 0 0-.123.722zM.19 20.059q-.19.002-.19-.192v-4.449q0-.19.19-.19h.425q.094 0 .148.039q.053.037.072.143l.057.304q.92-.628 1.79-.628q.893 0 1.209.677q.947-.677 1.895-.677q.662 0 1.016.37q.354.375.354 1.058v3.354q0 .19-.192.19H6.4q-.192.002-.193-.19v-3.085q-.001-.478-.18-.706q-.186-.23-.575-.23q-.7 0-1.41.43a1 1 0 0 1 .01.142v3.448q0 .191-.19.191h-.566q-.19.002-.19-.19v-3.085q0-.478-.183-.706q-.184-.23-.575-.23q-.728 0-1.399.42v3.6q.002.192-.19.191zm9.731.143q-.679 0-1.044-.382q-.363-.381-.363-1.077v-3.32q-.001-.194.191-.193h.564q.194 0 .193.19v3.022q0 .513.201.757q.201.242.642.242q.69 0 1.389-.458v-3.565q-.002-.19.19-.19h.565q.193 0 .192.19v4.452q0 .188-.192.188h-.41a.26.26 0 0 1-.15-.037q-.052-.038-.072-.143l-.066-.333q-.892.656-1.83.657m5.44 0q-.806 0-1.446-.267a.4.4 0 0 1-.158-.105q-.043-.058-.043-.18v-.269q-.001-.172.115-.172q.066 0 .238.058q.635.2 1.313.199q.471-.001.714-.181q.245-.181.244-.523a.5.5 0 0 0-.148-.373a1.6 1.6 0 0 0-.541-.285l-.815-.304q-1.064-.391-1.062-1.333q-.001-.623.484-1.001q.483-.382 1.267-.382a3.5 3.5 0 0 1 1.217.22a.34.34 0 0 1 .164.098q.046.062.047.185v.258q0 .172-.123.172a1 1 0 0 1-.222-.047a3.6 3.6 0 0 0-1.035-.154q-.919.001-.92.62q0 .247.155.39q.153.143.603.315l.746.288q.566.216.815.519q.248.297.248.775q0 .677-.507 1.077t-1.35.4zm3.065-.144q-.192.002-.193-.19v-4.45q.001-.19.193-.19h.564q.192 0 .193.19v4.452q-.001.188-.193.188zm.287-5.688q-.277 0-.437-.156a.56.56 0 0 1-.158-.414a.56.56 0 0 1 .158-.414a.6.6 0 0 1 .437-.158q.276 0 .435.158a.55.55 0 0 1 .158.414q.001.255-.158.414a.6.6 0 0 1-.435.156m4.002 5.793q-1.13 0-1.727-.642q-.6-.644-.6-1.863q0-1.21.618-1.873q.617-.661 1.748-.662q.517 0 1.015.183q.106.036.148.094c.042.058.043.103.043.19v.257q0 .19-.123.19a.6.6 0 0 1-.154-.028a2.8 2.8 0 0 0-.796-.113q-.804 0-1.159.404c-.355.404-.353.7-.353 1.293v.123q0 .864.36 1.272q.36.403 1.134.404q.4.001.861-.134a.6.6 0 0 1 .144-.028q.124 0 .125.19v.259q0 .124-.039.18a.33.33 0 0 1-.152.103q-.47.201-1.093.2z'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+
+  .tidal {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    color: #d85059;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M12.012 3.992L8.008 7.996L4.004 3.992L0 7.996L4.004 12l4.004-4.004L12.012 12l-4.004 4.004l4.004 4.004l4.004-4.004L12.012 12l4.004-4.004zm4.03 4.004l3.979-3.979L24 7.996l-3.979 3.979z'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
