--- a/estilos/mediaqueries.css
+++ b/estilos/mediaqueries.css
@@ -48,8 +48,7 @@
     }
 
     .foto3{
-        background-image: url(../imagens/página\ inicial.jpg);
-    }
+        background-image: url(../imagens/páginainicial.jpg);
 
     blockquote{
         height: 20vh;
