--- a/estilos/mediaqueries.css
+++ b/estilos/mediaqueries.css
@@ -48,7 +48,7 @@
     }
 
     .foto3{
-        background-image: url(../imagens/páginainicial.jpg);
+        background-image: url(../imagens/paginainicial.JPEG);
 
     blockquote{
         height: 20vh;
