--- a/estilos/mediaqueries.css
+++ b/estilos/mediaqueries.css
@@ -10,19 +10,26 @@
     }
 
     blockquote{
-        font-size: 3em;
-        line-height: 5rem;
+        font-size: 2.5em;
+        line-height: 4rem;
         padding: 1.5rem 3rem;
     }
 }
 
-@media screen and (min-width:930px) {
+@media screen and (min-width:930px){
 
+    .foto2{
+        display: flex;
+        justify-content: center;
+    }
 
     blockquote{
-        font-size: 4em;
-        line-height: 6rem;
-        padding: 1.5rem 3rem;
+        font-size: 1.5em;
+        padding: 1rem 3rem;
+    }
+
+    .citacao{
+        font-size: 1em;
     }
 
     .section_sobre{
@@ -38,13 +45,16 @@
 
 }
 
-@media screen and (min-width:1200px){
+@media screen and (min-width:650px) and (max-height:820px){
+    
     .foto1{
         background-image: url(../imagens/foto1_vertical2.JPEG);  
     }
 
     .foto2{
         background-image: url(../imagens/foto2_vertical2.JPEG);
+        display: flex;
+        justify-content: center;
     }
 
     .foto3{
@@ -52,21 +62,43 @@
 
     blockquote{
         height: 20vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
 
     .citacao{
         font-size: 0.6em; 
         padding: 0px 1rem;
-        display: block;
     }
 
     .texto_sobre{
         text-align: justify;
     }
+}
 
+@media screen and (min-width:1200px) and (min-height: 900px){
 
+    .foto1{
+        background-image: url(../imagens/foto1_vertical2.JPEG);  
+    }
 
+    .foto2{
+        background-image: url(../imagens/foto2_vertical2.JPEG);
+        display: flex;
+        justify-content: center;
+    }
+
+    .foto3{
+        background-image: url(../imagens/paginainicial.JPEG);
+
+    blockquote{
+        height: 20vh;
+    }
+
+    .citacao{
+        font-size: 0.6em; 
+        padding: 0px 1rem;
+    }
+
+    .texto_sobre{
+        text-align: justify;
+    }
 }
