--- a/estilos/mediaqueries.css
+++ b/estilos/mediaqueries.css
@@ -37,6 +37,10 @@
         padding: 80px 100px;
     }
 
+    .container_texto_sobre{
+
+    }
+
     .titulo_contato{
         display: inline;
         background-color: #fcdaa8e9;
